...
        self.id = id; self.name = name
        self.primary = primary; self.secondary = secondary; self.tertiary = tertiary
        self.accent = accent; self.background = background; self.text = text
        self.mutedText = mutedText; self.critical = critical; self.warning = warning; self.success = success
    }

    public static let classic = Self(id: "classic", name: "Classic / TNG", primary: .init(0xFCC19F), secondary: .init(0xBAA4E5), tertiary: .init(0xC082A9), accent: .init(0xEB943A))
    public static let voyager = Self(id: "voyager", name: "Voyager", primary: .init(0x99CCFF), secondary: .init(0xFFBB33), tertiary: .init(0x55A7FF), accent: .init(0xE98181))
    public static let nemesis = Self(id: "nemesis", name: "Nemesis Blue", primary: .init(0x6699FF), secondary: .init(0x88BBFF), tertiary: .init(0xEBF0FF), accent: .init(0x99CC33))
    public static let lowerDecks = Self(id: "lowerDecks", name: "Lower Decks", primary: .init(0xFFAA44), secondary: .init(0xFFCC99), tertiary: .init(0xFFEECC), accent: .init(0xFF7700))
    public static let lowerDecksPADD = Self(id: "lowerDecksPADD", name: "Lower Decks PADD", primary: .init(0x66CCFF), secondary: .init(0x99CCFF), tertiary: .init(0x5588EE), accent: .init(0x88EEFF))
    public static let picard = Self(id: "picard", name: "Picard", primary: .init(0x37A6D1), secondary: .init(0xD2D5DF), tertiary: .init(0x41C4F7), accent: .init(0xFF6753))
    public static let highContrast = Self(id: "highContrast", name: "High contrast", primary: .white, secondary: .init(0xFFFF99), tertiary: .white, accent: .init(0x99DDFF), text: .white, mutedText: .white)
    public static let presets: [Self] = [.classic, .voyager, .nemesis, .lowerDecks, .lowerDecksPADD, .picard, .highContrast]
...
